convert vmdir dir to use vmregconfig
Change-Id: Ia9dc86d984d61039cb87cf2907cf6b7a4ad630c3

--- a/configure.ac
+++ b/configure.ac
@@ -1839,6 +1839,7 @@ AC_CONFIG_FILES([Makefile
                  vmdir/server/main/Makefile
                  vmdir/client/Makefile
                  vmdir/config/vmdir.reg
+                 vmdir/config/vmdircfg.yaml
                  vmdir/testing/Makefile
                  vmdir/testing/query/Makefile
                  vmdir/testing/kerberos/Makefile
