--- a/vmdir/config/Makefile.am
+++ b/vmdir/config/Makefile.am
@@ -1,6 +1,7 @@
 vmdirconf_DATA = \
     vmdirschema.ldif \
     vmdir.reg        \
+    vmdircfg.yaml        \
     vmdir-client.reg \
     vmdird-syslog-ng.conf \
     saslvmdird.conf \
