convert vmafd to use vmregconfig
Change-Id: I24709e76b25aad20884ff22245f1f3b925d45907

--- a/configure.ac
+++ b/configure.ac
@@ -1905,6 +1905,7 @@ AC_CONFIG_FILES([Makefile
                  vmafd/include/public/Makefile
                  vmafd/config/Makefile
                  vmafd/config/vmafd.reg
+                 vmafd/config/vmafdcfg.yaml
                  vmafd/common/Makefile
                  vmafd/vmnetevent/Makefile
                  vmafd/vmafcfg/Makefile
