--- a/vmafd/config/Makefile.am
+++ b/vmafd/config/Makefile.am
@@ -1,4 +1,5 @@
 vmafdconf_DATA = vmafd.reg \
+                 vmafdcfg.yaml \
                  vmafdd-syslog-ng.conf \
 		 java.security.linux \
                  vmafd-telegraf.conf
