convert vmca to use vmregconfig
Change-Id: I1d6a2875dae81e47ac07031a14af4d98ef164536

--- a/configure.ac
+++ b/configure.ac
@@ -1943,6 +1943,7 @@ AC_CONFIG_FILES([Makefile
                  vmca/include/public/Makefile
                  vmca/config/Makefile
                  vmca/config/vmca.reg
+                 vmca/config/vmcacfg.yaml
                  vmca/common/Makefile
                  vmca/service/Makefile
                  vmca/service/common/Makefile
