convert vmdns to use vmregconfig
Change-Id: Id125a6b24b9f091752f4d02cd3fe9a7de353cd50

--- a/configure.ac
+++ b/configure.ac
@@ -1888,6 +1888,7 @@ AC_CONFIG_FILES([Makefile
                  vmdns/include/public/Makefile
                  vmdns/config/Makefile
                  vmdns/config/vmdns.reg
+                 vmdns/config/vmdnscfg.yaml
                  vmdns/common/Makefile
                  vmdns/vmsock/Makefile
                  vmdns/vmsock/posix/Makefile
