--- a/vmdns/config/Makefile.am
+++ b/vmdns/config/Makefile.am
@@ -1,5 +1,6 @@
 vmdnsconf_DATA = \
     vmdns.reg    \
+    vmdnscfg.yaml    \
     vmdnsd-syslog-ng.conf \
     vmdns-rest.json \
     vmdns-telegraf.conf
