--- a/vmdns/common/Makefile.am
+++ b/vmdns/common/Makefile.am
@@ -33,6 +33,7 @@ libcommon_la_SOURCES = \
     utils.c
 
 libcommon_la_CPPFLAGS = \
+    -I$(top_srcdir)/vmcommon/include/public \
     -I$(top_srcdir)/vmdns/include \
     -I$(top_srcdir)/vmdns/include/public \
     @DCERPC_INCLUDES@ \
