convert rpm spec file to use vmregconfig
Change-Id: I25e77a67930d9f96238c98567575b1ef95c2d861

--- a/vmca/config/vmcacfg.yaml.in
+++ b/vmca/config/vmcacfg.yaml.in
@@ -2,6 +2,7 @@ vmca:
     Description: "VMware Certificate Service"
     User: "lightwave"
     Group: "lightwave"
+    ServerOption: "1"
 
     Parameters:
         RootCert: "@VMCA_DB_DIR@/root.cer"
