add VmRegCfg wrapper funcation
Change-Id: I7187b149f2176bcb2a812bdad0358367ffbde308

--- a/vmcommon/vmregconfig/Makefile.am
+++ b/vmcommon/vmregconfig/Makefile.am
@@ -3,6 +3,7 @@ noinst_LTLIBRARIES = libvmregconfig.la
 libvmregconfig_la_SOURCES = \
     globals.c \
     vmregconfig.c \
+    vmregcfgwrapper.c \
     readinternal.c \
     writeinternal.c \
     util.c
