use VmRegCfg wrapper funcation in vmdir
Change-Id: I60769fafcc3d75c6149b73ab31a7215725672660

--- a/vmdir/config/vmdircfg.yaml.in
+++ b/vmdir/config/vmdircfg.yaml.in
@@ -12,4 +12,4 @@ vmdir:
         EnableLdapCopy: "1"
         MdbEnableWal: "1"
         EnableRename: "0"
-        SslDisabledProtocols: "TLSv1\nTLSv1.1\n"
+        SslDisabledProtocols: "TLSv1,TLSv1.1"
