add vmdaemon to vmcommon
Change-Id: I7cca4026ed2023218a5e900558832be4c6164882

--- a/vmcommon/Makefile.am
+++ b/vmcommon/Makefile.am
@@ -27,6 +27,7 @@ libvmcommon_la_SOURCES = \
     vmnetworkutil.c \
     vmsignature.c \
     vmthreading.c \
+    vmdaemon.c \
     vmutil.c
 
 libvmcommon_la_LIBADD = \
