convert vmdir/tools/vmkdc_admin to use vmregconfig
Change-Id: I10789bc756f54db9845364dbf96906450ae6583a

--- a/vmdir/tools/vmkdc_admin/Makefile.am
+++ b/vmdir/tools/vmkdc_admin/Makefile.am
@@ -22,6 +22,7 @@ vmkdc_admin_CPPFLAGS = \
     @OPENSSL_INCLUDES@
 
 vmkdc_admin_LDADD = \
+    $(top_builddir)/vmcommon/libvmcommon.la \
     $(top_builddir)/vmdir/server/kdckrb5/libvmkrb5.la \
     $(top_builddir)/vmdir/kdccommon/libkdccommon.la \
     $(top_builddir)/vmdir/client/libvmdirclient.la \
