convert vmdir/server/vmkdc to use vmregconfig
Change-Id: If8a609394c2ffd2aa09ce7f01a8b1894b40563ce

--- a/vmdir/server/vmkdc/Makefile.am
+++ b/vmdir/server/vmkdc/Makefile.am
@@ -38,6 +38,7 @@ libvmkdcserv_la_CPPFLAGS = \
     @OPENSSL_INCLUDES@
 
 libvmkdcserv_la_LIBADD = \
+    $(top_builddir)/vmcommon/libvmcommon.la \
     $(top_builddir)/vmdir/server/kdckrb5/libvmkrb5.la \
     $(top_builddir)/vmdir/server/kdctools/libvmkdctools.la \
     $(top_builddir)/vmdir/server/kdcsrvcommon/libkdcsrvcommon.la \
