convert vmdns to use vmdaemon
Change-Id: Ie3eec782a7a365ccda09ceb4b6c466295677e828

--- a/vmdns/config/Makefile.am
+++ b/vmdns/config/Makefile.am
@@ -1,6 +1,8 @@
 vmdnsconf_DATA = \
-    vmdns.reg    \
     vmdnscfg.yaml    \
     vmdnsd-syslog-ng.conf \
     vmdns-rest.json \
     vmdns-telegraf.conf
+
+systemd_DATA = \
+    vmware-vmdnsd.service
