convert vmca to use vmdaemon
Change-Id: I4ea2a5e06b2dfcaaf82aaf76c61ad3b93015fe32

--- a/vmca/config/Makefile.am
+++ b/vmca/config/Makefile.am
@@ -1,7 +1,9 @@
 vmcaconf_DATA = \
-    vmca.reg  \
     vmcacfg.yaml  \
     vmcad-syslog-ng.conf \
     certool.cfg \
     vmca-rest-v2.json \
     vmca-telegraf.conf
+
+systemd_DATA = \
+    vmware-vmcad.service
