convert vmdir to use vmdaemon
Change-Id: Ifa75fc0463b4fe413bdc509790bc981a5522c4df

--- a/vmdir/config/Makefile.am
+++ b/vmdir/config/Makefile.am
@@ -1,12 +1,13 @@
 vmdirconf_DATA = \
     vmdirschema.ldif \
-    vmdir.reg        \
     vmdircfg.yaml        \
-    vmdir-client.reg \
     vmdird-syslog-ng.conf \
     saslvmdird.conf \
     vmdir-rest.json \
     vmdir-rest-api.json \
     vmdir-telegraf.conf
+
+systemd_DATA = \
+    vmware-vmdird.service
 
 bin_SCRIPTS = vmdir_upgrade.sh
