convert vmafd to use vmdaemon
Change-Id: Ic73d3be9ebc16c71b37a8c7666b06feac0d5bc76

--- a/vmafd/common/Makefile.am
+++ b/vmafd/common/Makefile.am
@@ -30,6 +30,7 @@ libcommon_la_SOURCES = \
 
 libcommon_la_CPPFLAGS = \
     -Wno-error=deprecated-declarations \
+    -I$(top_srcdir)/vmcommon/include/public \
     -I$(top_srcdir)/vmafd/include \
     -I$(top_srcdir)/vmafd/include/public \
     -I$(top_srcdir)/vmdir/include/public \
@@ -38,5 +39,6 @@ libcommon_la_CPPFLAGS = \
     @OPENSSL_INCLUDES@
 
 libcommon_la_LDFLAGS = \
+    $(top_builddir)/vmcommon/libvmcommon.la \
     @LDAP_LIBS@ \
     -static
