--- a/vmafd/config/Makefile.am
+++ b/vmafd/config/Makefile.am
@@ -1,8 +1,9 @@
-vmafdconf_DATA = vmafd.reg \
-                 vmafdcfg.yaml \
+vmafdconf_DATA = vmafdcfg.yaml \
                  vmafdd-syslog-ng.conf \
 		 java.security.linux \
                  vmafd-telegraf.conf
+
+systemd_DATA = vmware-vmafdd.service
 
 javaetc_DATA = vmware-override-java.security
 
