add container service stop/stop scripts and config tools support
Change-Id: Ibefc0bc5cad4f623e4c917111ecea10639c02840

--- a/vmafd/config/Makefile.am
+++ b/vmafd/config/Makefile.am
@@ -8,3 +8,5 @@ systemd_DATA = vmware-vmafdd.service
 javaetc_DATA = vmware-override-java.security
 
 bin_SCRIPTS = lw-support-bundle.sh
+
+sbin_SCRIPTS = vmware-vmafdd.sh
