add lwsts default group
Change-Id: I4bf46b8a87fb28000790739ea940f6ce5b8b5b97

--- a/vmdir/unit-tests/server/replication2/Makefile.am
+++ b/vmdir/unit-tests/server/replication2/Makefile.am
@@ -69,6 +69,7 @@ replication2_LDADD = \
     @CRYPTO_LIBS@ \
     @CRYPT_LIBS@ \
     @PTHREAD_LIBS@ \
+    @RESOLV_LIBS@ \
     @JANSSON_LIBS@ \
     @COPENAPI_LIBS@ \
     @CRESTENGINE_LIBS@ \
