Change passwords used for testing

--- a/vmidentity/idm/client/src/test/resources/config.properties
+++ b/vmidentity/idm/client/src/test/resources/config.properties
@@ -3,12 +3,12 @@ idm.server.service-provider-name = vsphere.local
 idm.server.stskey-alias          = stskey
 idm.server.stskey-alias1         = solution1
 idm.server.stskey-store          = /sts-store.jks
-idm.server.stskey-store-password = ca$hc0w
+idm.server.stskey-store-password = Passw0rd$
 
 idm.server.trusted-stskey-alias          = leaf
 idm.server.trusted-stskey-alias1         = root
 idm.server.trusted-stskey-store          = /trusted-sts-store.jks
-idm.server.trusted-stskey-store-password = ca$hc0w
+idm.server.trusted-stskey-store-password = Passw0rd$
 
 idm.tenant-1.name      = abc.com
 idm.tenant-1.long-name = ABC Corp
@@ -19,7 +19,7 @@ idm.tenant-1.ad-provider-1.alias       = SSOLABS
 idm.tenant-1.ad-provider-1.bind-upn    = administrator@ssolabs.eng.vmware.com
 idm.tenant-1.ad-provider-1.bind-dn     = CN=administrator,CN=users,DC=SSOLABS,DC=ENG,DC=VMWARE,DC=COM
 idm.tenant-1.ad-provider-1.kdc-1       = ldap://dc-1.ssolabs.eng.vmware.com
-idm.tenant-1.ad-provider-1.password    = ca$hc0w
+idm.tenant-1.ad-provider-1.password    = Passw0rd$
 idm.tenant-1.ad-provider-1.user-search-base-dn  = DC=SSOLABS,DC=ENG,DC=VMWARE,DC=COM
 idm.tenant-1.ad-provider-1.group-search-base-dn = DC=SSOLABS,DC=ENG,DC=VMWARE,DC=COM
 idm.tenant-1.ad-provider-1.user-1-id       = lookup
@@ -42,7 +42,7 @@ idm.tenant-1.ad-ldaps-provider-1.domain-name = psqe-dns01.pslabs.eng.vmware.com
 idm.tenant-1.ad-ldaps-provider-1.alias       = psqe-dns01
 idm.tenant-1.ad-ldaps-provider-1.bind-dn     = CN=Administrator,CN=Users,DC=pslabs,DC=eng,DC=vmware,DC=com
 idm.tenant-1.ad-ldaps-provider-1.kdc-1 = ldaps://psqe-dns01.pslabs.eng.vmware.com
-idm.tenant-1.ad-ldaps-provider-1.password    = ca$hc0w
+idm.tenant-1.ad-ldaps-provider-1.password    = Passw0rd$
 idm.tenant-1.ad-ldaps-provider-1.user-search-base-dn  = CN=Users,DC=pslabs,DC=eng,DC=vmware,DC=com
 idm.tenant-1.ad-ldaps-provider-1.group-search-base-dn = CN=Users,DC=pslabs,DC=eng,DC=vmware,DC=com
 idm.tenant-1.ad-ldaps-provider-1.cert.alias       = /ad_ldapskey.cer
@@ -83,7 +83,7 @@ idm.probeConnectivity.providerUri = ldap://10.136.33.170
 idm.probeConnectivity.userDNName = CN=Security Token Service,CN=users,DC=SSOLABS,DC=ENG,DC=VMWARE,DC=COM
 idm.probeConnectivity.userName = sts@ssolabs.eng.vmware.com
 idm.probeConnectivity.spn = STS/sso2.ssolabs.eng.vmware.com
-idm.probeConnectivity.password = ca$hc0w
+idm.probeConnectivity.password = Passw0rd$
 idm.probeConnectivity.badPassword = wrongpwd
 idm.probeConnectivity.userBaseDn = dc=ssolabs,dc=eng,dc=vmware,dc=com
 idm.probeConnectivity.groupBaseDn = dc=ssolabs,dc=eng,dc=vmware,dc=com
@@ -155,7 +155,7 @@ idm.tenant-3.name = notadded.com
 idm.tenant-1.ad-provider-2.domain-name = ssolabs3.com
 idm.tenant-1.ad-provider-2.bind-upn    = sts@ssolabs3.com
 idm.tenant-1.ad-provider-2.spn         = STS/ssolabs3.com
-idm.tenant-1.ad-provider-2.password    = ca$hc0w1ca$hc0w1
+idm.tenant-1.ad-provider-2.password    = Passw0rd$1Passw0rd$1
 idm.tenant-1.ad-provider-2.user1-upn = us2@ssolabs2.com
 idm.tenant-1.ad-provider-2.user1-upn-password = $so2014
 idm.tenant-1.ad-provider-2.user2-upn = uc1s2@child1.ssolabs2.com
