--- a/vmidentity/websso/src/test/resources/testconfig.properties
+++ b/vmidentity/websso/src/test/resources/testconfig.properties
@@ -25,7 +25,7 @@ VMware.net.brand-name=ACME
 # Key store will be looked for in /tmp (Linux) or %TMP% (Windows), then in resources
 VMware.net.credentials.key-store-filename=sts-store.jks
 VMware.net.credentials.key-store-alias=stskey
-VMware.net.credentials.key-store-password=ca$hc0w
+VMware.net.credentials.key-store-password=Passw0rd$
 
 # Tenant admin for testing
 tenant-admin-username=Administrator
@@ -45,7 +45,7 @@ Demo.authn-requests-signed=true
 # Key store will be looked for in /tmp (Linux) or %TMP% (Windows), then in resources
 Demo.credentials.key-store-filename=sts-store.jks
 Demo.credentials.key-store-alias=stskey
-Demo.credentials.key-store-password=ca$hc0w
+Demo.credentials.key-store-password=Passw0rd$
 
 Demo.assertion-consumer-service-0=ACS0
 Demo.assertion-consumer-service-1=ACS1
@@ -71,7 +71,7 @@ Demo2.authn-requests-signed=true
 # Key store will be looked for in /tmp (Linux) or %TMP% (Windows), then in resources
 Demo2.credentials.key-store-filename=sts-store.jks
 Demo2.credentials.key-store-alias=stskey
-Demo2.credentials.key-store-password=ca$hc0w
+Demo2.credentials.key-store-password=Passw0rd$
 
 Demo2.assertion-consumer-service-0=ACS2
 #Demo.assertion-consumer-service-1=ACS1
