--- a/vmidentity/wsTrustClient/src/integration-test/resources/config.properties
+++ b/vmidentity/wsTrustClient/src/integration-test/resources/config.properties
@@ -13,7 +13,7 @@ oidc.rp.prefix = oidc-client-test-
 system.tenant = lw-testdom.com
 system.domain = lw-testdom.com
 system.admin.username = Administrator@lw-testdom.com
-system.admin.password = Ca$hc0w1
+system.admin.password = Passw0rd$
 
 # Specify an existing SSO user that has administrative role
 sso.admin.user.name=administrator
@@ -110,17 +110,17 @@ temp.user.password=rootCa$hc0w
 temp.group.name=tempGroup
 
 ldapUser.user.name=ldapuser3@ssotest.com
-ldapUser.user.password=ca$hc0w
+ldapUser.user.password=Passw0rd$
 ldapUser.user.domain=ssotest.com
 ldapUser.group.name=
 
 ad1User.user.name=staf@pslabs.eng.vmware.com
-ad1User.user.password=Ca$hc0w1
+ad1User.user.password=Passw0rd$
 ad1User.user.domain=pslabs.eng.vmware.com
 ad1User.group.name=
 
 ad2User.user.name=staf1@pslabs.eng.vmware.com
-ad2User.user.password=Ca$hc0w1
+ad2User.user.password=Passw0rd$
 ad2User.user.domain=pslabs.eng.vmware.com
 ad2User.group.name=
 
@@ -136,7 +136,7 @@ sso.non-existing.user.domain=vmwarem1
 # Specify an existing SSO user from active directory. The SSO server must run
 # on a machine joined in the same domain. Domain name should be in lower case.
 sso.valid.ad.user.name=ssoadmin@pslabs.eng.vmware.com
-sso.valid.ad.user.pass=Ca$hc0w1
+sso.valid.ad.user.pass=Passw0rd$
 sso.valid.ad.user.domain=pslabs.eng.vmware.com
 sso.valid.ad.user.group=Administrators
 
@@ -147,7 +147,7 @@ sso.valid.ad.group.description=AD group description
 
 #Specify another existing sso user from active directory.
 sso.valid.ad.user2.name=staf1
-sso.valid.ad.user2.pass=Ca$hc0w1
+sso.valid.ad.user2.pass=Passw0rd$
 sso.valid.ad.user2.domain=pslabs.eng.vmware.com
 sso.valid.ad.user2.firstname=staf1
 sso.valid.ad.user2.lastname=testuser
