--- a/vmidentity/openidconnect/client/src/test/resources/config.properties
+++ b/vmidentity/openidconnect/client/src/test/resources/config.properties
@@ -2,11 +2,11 @@ oidc.op.FQDN = localhost.localdomain
 oidc.op.port = 443
 oidc.rp.prefix = oidc-client-test-
 admin.user = Administrator@lw-testdom.com
-admin.password = Ca$hc0w1
+admin.password = Passw0rd$
 tenant = lw-testdom.com
 tenant1 = integ-test.com
 tenant1.admin.user = Administrator@integ-test.com
-tenant1.admin.password = Ca$hc0w1
+tenant1.admin.password = Passw0rd$
 tenant1.issuer = oidc-client-test
 
 # GSS grant test AD domain config
