--- a/vmidentity/rest/idm/client/src/integration-test/resources/config.properties
+++ b/vmidentity/rest/idm/client/src/integration-test/resources/config.properties
@@ -12,4 +12,4 @@ system.domain=lw-testdom.com
 # System Tenant's Admininistrator credentials
 ##
 system.admin.username=Administrator
-system.admin.password=Ca$hc0w1
+system.admin.password=Passw0rd$
