--- a/vmidentity/sso-config/src/test/resources/config.properties
+++ b/vmidentity/sso-config/src/test/resources/config.properties
@@ -1,5 +1,5 @@
 key-store.file = store.jks
-key-store.password = ca$hc0w
+key-store.password = Passw0rd$
 key-store.type = JKS
 rootca1.filename = rootca1.cer
 rootca2.filename = rootca2.cer
