--- a/vmidentity/websso/src/integration-test/resources/config.properties
+++ b/vmidentity/websso/src/integration-test/resources/config.properties
@@ -3,7 +3,7 @@ oidc.op.port = 443
 system.tenant = lw-testdom.com
 system.domain = lw-testdom.com
 system.admin.username = Administrator@lw-testdom.com
-system.admin.password = Ca$hc0w1
+system.admin.password = Passw0rd$
 
 org1.name =  Org1
 org2.name =  Org2
