enable go-based STS in hmake test
TEST: run hmake test.  vmdir integartion test does exercise REST API.

Change-Id: I8a7109501a824ae628e64128baeae359f6e90e5d

--- a/support/tests/lightwave/client/Dockerfile
+++ b/support/tests/lightwave/client/Dockerfile
@@ -5,5 +5,4 @@ VOLUME ["/sys/fs/cgroup"]
 LABEL vendor="VMware, Inc."
 
 RUN tdnf makecache -q
-RUN tdnf update likewise-open --disablerepo=* --enablerepo=lightwave -qy
-RUN tdnf install net-tools shadow findutils gawk jansson libyaml sqlite-devel jq gcc glibc-devel git go-1.9.1 netcat -qy
+RUN tdnf install net-tools shadow findutils gawk jansson libyaml sqlite-devel jq gcc glibc-devel git go-1.9.1 netcat bindutils -qy
