--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,8 @@ services:
   - docker
 
 script:
-  - travis_wait 30 bash build.sh
+  - bash build.sh bootstrap
+  - bash build.sh build
+  - bash build.sh check
+  - bash build.sh pack
+  - bash build.sh test
