fix maven urls  - use https  - update central.maven.org to repo1.maven.org

--- a/config/jdepends/build.xml
+++ b/config/jdepends/build.xml
@@ -22,21 +22,21 @@
        <resources>
 
           <!-- CORE (COMPILE_TIME + RUN_TIME)DEPENDENCIES -->
-          <url url="http://central.maven.org/maven2/commons-logging/commons-logging/1.1.1/commons-logging-1.1.1.jar" />
-          <url url="http://central.maven.org/maven2/commons-lang/commons-lang/2.5/commons-lang-2.5.jar" />
-          <url url="http://central.maven.org/maven2/net/java/dev/jna/jna/4.2.1/jna-4.2.1.jar" />
-          <url url="http://central.maven.org/maven2/net/java/dev/jna/jna-platform/4.2.1/jna-platform-4.2.1.jar" />
-          <url url="http://central.maven.org/maven2/commons-codec/commons-codec/1.4/commons-codec-1.4.jar" />
-          <url url="http://central.maven.org/maven2/org/slf4j/jcl-over-slf4j/1.7.25/jcl-over-slf4j-1.7.25.jar" />
-          <url url="http://central.maven.org/maven2/org/apache/logging/log4j/log4j-1.2-api/2.8.2/log4j-1.2-api-2.8.2.jar" />
-          <url url="http://central.maven.org/maven2/org/apache/logging/log4j/log4j-core/2.8.2/log4j-core-2.8.2.jar" />
-          <url url="http://central.maven.org/maven2/org/apache/logging/log4j/log4j-api/2.8.2/log4j-api-2.8.2.jar" />
-          <url url="http://central.maven.org/maven2/org/apache/logging/log4j/log4j-slf4j-impl/2.8.2/log4j-slf4j-impl-2.8.2.jar" />
-          <url url="http://central.maven.org/maven2/org/slf4j/jcl-over-slf4j/1.7.25/jcl-over-slf4j-1.7.25.jar" />
+          <url url="https://repo1.maven.org/maven2/commons-logging/commons-logging/1.1.1/commons-logging-1.1.1.jar" />
+          <url url="https://repo1.maven.org/maven2/commons-lang/commons-lang/2.5/commons-lang-2.5.jar" />
+          <url url="https://repo1.maven.org/maven2/net/java/dev/jna/jna/4.2.1/jna-4.2.1.jar" />
+          <url url="https://repo1.maven.org/maven2/net/java/dev/jna/jna-platform/4.2.1/jna-platform-4.2.1.jar" />
+          <url url="https://repo1.maven.org/maven2/commons-codec/commons-codec/1.4/commons-codec-1.4.jar" />
+          <url url="https://repo1.maven.org/maven2/org/slf4j/jcl-over-slf4j/1.7.25/jcl-over-slf4j-1.7.25.jar" />
+          <url url="https://repo1.maven.org/maven2/org/apache/logging/log4j/log4j-1.2-api/2.8.2/log4j-1.2-api-2.8.2.jar" />
+          <url url="https://repo1.maven.org/maven2/org/apache/logging/log4j/log4j-core/2.8.2/log4j-core-2.8.2.jar" />
+          <url url="https://repo1.maven.org/maven2/org/apache/logging/log4j/log4j-api/2.8.2/log4j-api-2.8.2.jar" />
+          <url url="https://repo1.maven.org/maven2/org/apache/logging/log4j/log4j-slf4j-impl/2.8.2/log4j-slf4j-impl-2.8.2.jar" />
+          <url url="https://repo1.maven.org/maven2/org/slf4j/jcl-over-slf4j/1.7.25/jcl-over-slf4j-1.7.25.jar" />
 
           <!-- TEST DEPENDENCIES -->
-           <url url="http://central.maven.org/maven2/org/powermock/powermock-easymock-release-full/1.6.2/powermock-easymock-release-full-1.6.2-full.jar" />
-           <url url="http://central.maven.org/maven2/ant-contrib/ant-contrib/1.0b3/ant-contrib-1.0b3.jar" />
+           <url url="https://repo1.maven.org/maven2/org/powermock/powermock-easymock-release-full/1.6.2/powermock-easymock-release-full-1.6.2-full.jar" />
+           <url url="https://repo1.maven.org/maven2/ant-contrib/ant-contrib/1.0b3/ant-contrib-1.0b3.jar" />
 
          </resources>
      </copy>
