Upgrade gulp-cli to 2.3.0 Add package-lock.json files to clean target Update the RPM release version to 2

--- a/ui/Makefile
+++ b/ui/Makefile
@@ -2,6 +2,17 @@
 # Copyright 2018 VMware, Inc
 #
 
+CLEAN_TARGETS = \
+	stage \
+	lightwave-ui/idm/dist \
+	lightwave-ui/idm/node_modules \
+	lightwave-ui/idm/package-lock.json \
+	lightwave-ui/lwdir/dist \
+	lightwave-ui/lwdir/node_modules \
+	lightwave-ui/lwdir/package-lock.json \
+	lwraft-ui/node_modules \
+	lwraft-ui/package-lock.json
+
 all: lightwaveui lwraftui
 
 stage:
@@ -14,4 +25,4 @@ lightwaveui: stage
 	rpmbuild --define "_topdir `pwd`/stage" -ba lightwave-ui/build/lightwave-ui.spec
 
 clean:
-	rm -rf stage lightwave-ui/idm/dist lightwave-ui/lwdir/dist lightwave-ui/idm/node_modules lightwave-ui/lwdir/node_modules lwraft-ui/node_modules
+	rm -rf $(CLEAN_TARGETS)
